err/boilerplate-dcc-pyside-widget.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/globals'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/gui'...
Compiling './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/gui/gui_functions.py'...
***   File "./lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/gui/gui_functions.py", line 240
    exec pyc in frame
           ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/mvc'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/Compiler'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/port_v2'...
Compiling './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/port_v2/invoke.py'...
***   File "./lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/port_v2/invoke.py", line 36
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/port_v2/load_plugin.py'...
***   File "./lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/port_v2/load_plugin.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/lib/third_party/pysideuic/widget-plugins'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/media'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/media/fonts'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/media/icons'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget/media/ui'...
Listing './lib/python3.5/site-packages/boilerplate_dcc_pyside_widget-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
